--- a/random.html
+++ b/random.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="css/rest.css">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
 </head>
@@ -25,7 +25,7 @@
 		<h1>Random Page</h1>
 	</header>
 	<main>
-		<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/">W3 Schools HTML 
+		<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools HTML 
 			tutorial</a> as well as the readings from Shay Howe's 
 			<a href = "https://learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>.
 
